--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "pretty-quick — staged && ng lint"
     }
   }
 }
