--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick — staged && ng lint"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
